Move groups and folders tree in .../tree endpoint
