# api/v1/routes/folders.mjs
@@ -19,6 +19,8 @@ router.use(auth.validateJWT)
 router.use("/:folder/items", itemsRouter)
 
 // Folders routes
+router.get('/tree', foldersController.tree)
+
 router.get('/:id', foldersController.get)
 
 router.get('/:id/groups', foldersController.groups)
@@ -28,8 +30,6 @@ router.post("/:parent/folders/", foldersController.create)
 router.patch("/:id", foldersController.update)
 
 router.delete("/:id", foldersController.remove)
-
-router.get('/util/tree', foldersController.tree)
 
 router.post("/:folder/groups/:group", foldersController.addGroup)
 
