# api/v1/routes/groups.mjs
@@ -17,6 +17,8 @@ router.use(auth.validateJWT)
 // Groups routes
 router.get("/", groupsController.list)
 
+router.get('/tree', groupsController.tree)
+
 router.get('/:id', groupsController.get)
 
 router.post("/:parent/groups", groupsController.create)
@@ -30,7 +32,5 @@ router.get("/:id/users", groupsController.getUsers)
 router.post('/:group/users/:user', groupsController.addUser)
 
 router.delete('/:group/users/:user', groupsController.removeUser)
-
-router.get('/util/tree', groupsController.tree)
 
 export default router
